// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index Alsos should render multiple correctly 1`] = `
.emotion-0 {
  position: relative;
  z-index: 2;
  padding: 1rem 0 0;
}

.emotion-2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-3 {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.emotion-5 {
  border-top: 1px solid #F2F2F2;
  padding: 0.5rem 0;
}

.emotion-7 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-7 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-7:hover,
.emotion-7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-7:visited {
  color: #6E6E73;
}

.emotion-7 svg {
  margin: 0;
}

.emotion-9 {
  color: #222222;
  background-color: #FFFFFF;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  display: inline-block;
  vertical-align: middle;
  padding-right: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-9 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-13 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-e2e="index-alsos"
  >
    <h4
      class="emotion-2"
    >
      Related content
    </h4>
    <ul
      class="emotion-3 emotion-4"
      role="list"
    >
      <li
        class="emotion-5 emotion-6"
        role="listitem"
      >
        <a
          aria-labelledby="IndexAlsosLink-hausalabarai48916590"
          class="focusIndicatorDisplayInlineBlock emotion-7 emotion-8"
          href="/hausa/labarai-48916590"
        >
          <div
            aria-hidden="true"
            class="emotion-9 emotion-10"
            data-e2e="media-indicator"
            dir="ltr"
          >
            <div
              class="emotion-11 emotion-12"
            >
              <svg
                aria-hidden="true"
                class="emotion-13 emotion-14"
                focusable="false"
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                >
                  <path
                    d="M.5.6h12v12H.5z"
                  />
                  <path
                    d="M2.144.96v11.28l8.712-5.64z"
                    fill="currentColor"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span
            id="IndexAlsosLink-hausalabarai48916590"
            role="text"
          >
            <span
              class="emotion-2"
            >
              video, 
            </span>
            <span>
              APC ba ta isa ta kore ni ba – Buba Galadima
            </span>
          </span>
        </a>
      </li>
      <li
        class="emotion-5 emotion-6"
        role="listitem"
      >
        <a
          class="focusIndicatorDisplayInlineBlock emotion-7 emotion-8"
          href="/hausa/labarai-42837051"
        >
          <span>
            Yaushe Obasanjo ya fara yi wa shugabannin kasa baki?
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Index Alsos should render one correctly 1`] = `
.emotion-0 {
  position: relative;
  z-index: 2;
  padding: 1rem 0 0;
}

.emotion-2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-3 {
  border-top: 1px solid #F2F2F2;
  padding: 0.5rem 0;
}

.emotion-5 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-5 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-5 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-5:hover,
.emotion-5:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5:visited {
  color: #6E6E73;
}

.emotion-5 svg {
  margin: 0;
}

.emotion-7 {
  color: #222222;
  background-color: #FFFFFF;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  display: inline-block;
  vertical-align: middle;
  padding-right: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-7 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-11 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-e2e="index-alsos"
  >
    <h4
      class="emotion-2"
    >
      Related content
    </h4>
    <div
      class="emotion-3 emotion-4"
    >
      <a
        aria-labelledby="IndexAlsosLink-hausalabarai48916590"
        class="focusIndicatorDisplayInlineBlock emotion-5 emotion-6"
        href="/hausa/labarai-48916590"
      >
        <div
          aria-hidden="true"
          class="emotion-7 emotion-8"
          data-e2e="media-indicator"
          dir="ltr"
        >
          <div
            class="emotion-9 emotion-10"
          >
            <svg
              aria-hidden="true"
              class="emotion-11 emotion-12"
              focusable="false"
              height="12"
              viewBox="0 0 12 12"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <path
                  d="M.5.6h12v12H.5z"
                />
                <path
                  d="M2.144.96v11.28l8.712-5.64z"
                  fill="currentColor"
                />
              </g>
            </svg>
          </div>
        </div>
        <span
          id="IndexAlsosLink-hausalabarai48916590"
          role="text"
        >
          <span
            class="emotion-2"
          >
            video, 
          </span>
          <span>
            APC ba ta isa ta kore ni ba – Buba Galadima
          </span>
        </span>
      </a>
    </div>
  </div>
</div>
`;
